[tool.poetry]
name = "Venom"
version = "4.3.2"
description = "Tool for Vulnerability Scanning & Pentesting"

license = "GPL3"

authors = [
    "NovaCygni <novacygni@hotmail.co.uk>"
]

readme = 'README.md'

repository = "https://github.com/v3n0m-Scanner/V3n0M-Scanner"
homepage = "https://github.com/v3n0m-Scanner/V3n0M-Scanner"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
termcolor = ">=1.1.0"
aiohttp = ">=3.7.4.post0"
asyncio = ">=3.4.3"
bs4 = ">=0.0.1"
dnspython = ">=2.1.0"
tqdm = ">=4.61.2"
DateTime = ">=4.3"
requests = "^2.21"
SocksiPy-branch = ">=1.1"
httplib2 = ">=0.19.1"
pre-commit = ">=2.14.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'my_package:main'